--- a/materializecssform/templates/materializecssform/field.html
+++ b/materializecssform/templates/materializecssform/field.html
@@ -107,7 +107,7 @@
 
     {% elif field|is_textarea %}
         <div class="input-field col {{ classes.label }}">
-            <textarea id="{{ field.id }}" class="materialize-textarea">{% if field.value %}{{ field.value }}{% endif %}</textarea>
+            <textarea id="{{ field.auto_id }}" class="materialize-textarea" name="{{field.name}}">{% if field.value %}{{ field.value }}{% endif %}</textarea>
             {% if field.auto_id %}
                 <label class="{{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}" for="{{ field.auto_id }}">{{ field.label }}</label>
             {% endif %}
