--- a/materializecssform/templates/materializecssform/field.html
+++ b/materializecssform/templates/materializecssform/field.html
@@ -6,8 +6,9 @@
         <div class="{{ classes.single_value }}">
             <div class="checkbox">
                 {% if field.auto_id %}
-                    <label {% if field.field.required and form.required_css_class %}class="{{ form.required_css_class }}"{% endif %}>
-                        {{ field }} <span>{{ field.label }}</span>
+                    {{ field }}
+                    <label for="{{ field.id_for_label }}" {% if field.field.required and form.required_css_class %}class="{{ form.required_css_class }}"{% endif %}>
+                        <span>{{ field.label }}</span>
                     </label>
                 {% endif %}
                 {% for error in field.errors %}
