--- a/materializecssform/templates/materializecssform/field.html
+++ b/materializecssform/templates/materializecssform/field.html
@@ -52,7 +52,7 @@
     <div class="col {{ classes.label }}">
 
         <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-        <input type="date" id="{{ field.id }}" class="datepicker" value="{% if field.value %}{{ field.value }}{% endif %}">
+        <input type="date" id="{{ field.auto_id }}" class="datepicker" value="{% if field.value %}{{ field.value }}{% endif %}">
 
             {% for error in field.errors %}
                 <span class="help-block {{ form.error_css_class }}">{{ error }}</span>
