--- a/materializecssform/templates/materializecssform/field.html
+++ b/materializecssform/templates/materializecssform/field.html
@@ -26,6 +26,11 @@
     {% elif field|is_radio %}
     <div class="col {{ classes.label }}">
 
+        {% comment %}
+        TODO: Make look like checked box
+        {% endcomment %}
+        {{ field }}
+
         {% if field.auto_id %}
             <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
         {% endif %}
@@ -48,7 +53,7 @@
             {% endif %}
         </div>
     </div>
-    {% elif field|is_date_input %}
+    {% elif field|is_date_input or field|is_datetime_input %}
     <div class="col {{ classes.label }}">
 
         <label for="{{ field.id_for_label }}">{{ field.label }}</label>
