--- a/materializecssform/templates/materializecssform/field.html
+++ b/materializecssform/templates/materializecssform/field.html
@@ -70,18 +70,17 @@
             {% endif %}
     </div>
     {% elif field|is_select %}
-    <div class="col {{ classes.label }}">
+    <div class="col input-field {{ classes.label }} {{ classes.value }}">
             {% if field|is_checkbox_select_multiple %}
-                {% if field.auto_id %}
-                    <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
-                {% endif %}
-                <div class="{{ classes.value }}">
-                    {% for choice in field %}
-                          <p>
-                            {{ choice.tag }}
-                            <label for="{{ choice.id_for_label }}">{{ choice.choice_label }}</label>
-                          </p>
-                    {% endfor %}
+                <div class="input-field {{ classes.value }}">
+                    <select multiple>
+                        {% for choice in field %}
+                              <option value="{{ choice.tag }}">{{ choice.choice_label }}</option>
+                        {% endfor %}
+                    </select>
+                    {% if field.auto_id %}
+                        <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
+                    {% endif %}
 
                     {% for error in field.errors %}
                         <span class="help-block {{ form.error_css_class }}">{{ error }}</span>
@@ -95,19 +94,26 @@
                 </div>
 
             {% else %}
-                <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-                {{field}}
-                {% for error in field.errors %}
-                    <span class="help-block {{ form.error_css_class }}">{{ error }}</span>
-                {% endfor %}
+                    <select>
+                        {% for choice in field %}
+                              <option value="{{ choice.tag }}">{{ choice.choice_label }}</option>
+                        {% endfor %}
+                    </select>
+                    {% if field.auto_id %}
+                    <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
+                    {% endif %}
 
-                {% if field.help_text %}
-                <p class="help-block">
-                    {{ field.help_text|safe }}
-                </p>
-                {% endif %}
+                    {% for error in field.errors %}
+                        <span class="help-block {{ form.error_css_class }}">{{ error }}</span>
+                    {% endfor %}
 
-                {% endif %}
+                    {% if field.help_text %}
+                    <p class="help-block">
+                        {{ field.help_text|safe }}
+                    </p>
+                    {% endif %}
+
+            {% endif %}
 
     </div>
 
