--- a/materializecssform/templates/materializecssform/field.html
+++ b/materializecssform/templates/materializecssform/field.html
@@ -25,31 +25,22 @@
     </div>
     {% elif field|is_radio %}
     <div class="col {{ classes.label }}">
+        <div class="{{ classes.single_value }} {% if field.field.required and form.required_css_class %}{{ form.required_css_class }}{% endif %}">
+            <label>
+                    {% if field.auto_id %}
+                        {{ field }}
+                        <span>{{ field.label }}</span>
+                    {% endif %}
+                    {% for error in field.errors %}
+                        <span class="help-block {{ form.error_css_class }}">{{ error }}</span>
+                    {% endfor %}
 
-        {% comment %}
-        TODO: Make look like checked box
-        {% endcomment %}
-        {{ field }}
-
-        {% if field.auto_id %}
-            <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
-        {% endif %}
-        <div class="{{ classes.value }}">
-            {% for choice in field %}
-                  <p>
-                    {{ choice.tag }}
-                    <label for="{{ choice.id_for_label }}">{{ choice.choice_label }}</label>
-                  </p>
-            {% endfor %}
-
-            {% for error in field.errors %}
-                <span class="help-block {{ form.error_css_class }}">{{ error }}</span>
-            {% endfor %}
-
+                </div>
+            </label>
             {% if field.help_text %}
-            <p class="help-block">
-                {{ field.help_text|safe }}
-            </p>
+                <p class="help-block">
+                    {{ field.help_text|safe }}
+                </p>
             {% endif %}
         </div>
     </div>
