--- a/materializecssform/templates/materializecssform/field.html
+++ b/materializecssform/templates/materializecssform/field.html
@@ -66,7 +66,7 @@
                 <div class="input-field {{ classes.value }}">
                     <select multiple>
                         {% for choice in field %}
-                              <option value="{{ choice.value }}">{{ choice.choice_label }}</option>
+                              <option value="{{ choice.choice_value }}">{{ choice.choice_label }}</option>
                         {% endfor %}
                     </select>
                     {% if field.auto_id %}
@@ -87,7 +87,7 @@
             {% else %}
                     <select>
                         {% for choice in field %}
-                              <option value="{{ choice.value }}">{{ choice.choice_label }}</option>
+                              <option value="{{ choice.choice_value }}">{{ choice.choice_label }}</option>
                         {% endfor %}
                     </select>
                     {% if field.auto_id %}
