--- a/materializecssform/templates/materializecssform/field.html
+++ b/materializecssform/templates/materializecssform/field.html
@@ -64,7 +64,7 @@
     <div class="col input-field {{ classes.label }} {{ classes.value }}">
             {% if field|is_checkbox_select_multiple %}
                 <div class="input-field {{ classes.value }}">
-                    <select multiple>
+                    <select multiple name="{{ field.name }}">
                         {% for choice in field %}
                               {{ choice.tag }}
                         {% endfor %}
@@ -85,7 +85,7 @@
                 </div>
 
             {% else %}
-                    <select>
+                    <select name="{{ field.name }}">
                         {% for choice in field %}
                               {{ choice.tag }}
                         {% endfor %}
