--- a/materializecssform/templates/materializecssform/field.html
+++ b/materializecssform/templates/materializecssform/field.html
@@ -62,7 +62,7 @@
     </div>
     {% elif field|is_select %}
     <div class="col input-field {{ classes.label }} {{ classes.value }}">
-            {% if field|is_checkbox_select_multiple %}
+            {% if field|is_select_multiple %}
                 <div class="input-field {{ classes.value }}">
                     <select multiple name="{{ field.name }}">
                         {% for choice in field %}
