--- a/materializecssform/templates/materializecssform/field.html
+++ b/materializecssform/templates/materializecssform/field.html
@@ -2,12 +2,12 @@
 
 
     {% if field|is_checkbox %}
-    <div class="col {{ classes.label }}">
-        <div class="{{ classes.single_value }} {% if field.field.required and form.required_css_class %}{{ form.required_css_class }}{% endif %}">
+    <div class="col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
+        <div class="{% if field.field.required and form.required_css_class %}{{ form.required_css_class }}{% endif %}">
             <label>
-                    {% if field.auto_id %}
-                        {{ field }}
 
+                    {{ field }}
+                    {% if field.auto_id %}
                         <span>{{ field.label }}</span>
                     {% endif %}
                     {% for error in field.errors %}
@@ -23,11 +23,11 @@
         </div>
     </div>
     {% elif field|is_radio %}
-    <div class="col {{ classes.label }}">
-        <div class="{{ classes.single_value }} {% if field.field.required and form.required_css_class %}{{ form.required_css_class }}{% endif %}">
+    <div class="col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
+        <div class="{% if field.field.required and form.required_css_class %}{{ form.required_css_class }}{% endif %}">
             <label>
+                    {{ field }}
                     {% if field.auto_id %}
-                        {{ field }}
                         <span>{{ field.label }}</span>
                     {% endif %}
                     {% for error in field.errors %}
@@ -42,11 +42,88 @@
         </div>
     </div>
     {% elif field|is_date_input or field|is_datetime_input %}
-    <div class="col {{ classes.label }}">
+    <div class="input-field col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
 
-        <label for="{{ field.id_for_label }}">{{ field.label }}</label>
         <input type="date" id="{{ field.auto_id }}" name="{{ field.name }}" class="datepicker" value="{% if field.value %}{{ field.value }}{% endif %}">
+        <label for="{{ field.id_for_label }}">{{ field.label }}</label>
 
+        {% for error in field.errors %}
+            <span class="help-block {{ form.error_css_class }}">{{ error }}</span>
+        {% endfor %}
+
+        {% if field.help_text %}
+        <p class="help-block">
+            {{ field.help_text|safe }}
+        </p>
+        {% endif %}
+
+    </div>
+    {% elif field|is_select %}
+    <div class="input-field col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
+            {% if field|is_select_multiple %}
+                <select multiple name="{{ field.name }}">
+                    {% for choice in field %}
+                          {{ choice.tag }}
+                    {% endfor %}
+                </select>
+                {% if field.auto_id %}
+                    <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
+                {% endif %}
+
+                {% for error in field.errors %}
+                    <span class="help-block {{ form.error_css_class }}">{{ error }}</span>
+                {% endfor %}
+
+                {% if field.help_text %}
+                <p class="help-block">
+                    {{ field.help_text|safe }}
+                </p>
+                {% endif %}
+
+            {% else %}
+                <select name="{{ field.name }}">
+                    {% for choice in field %}
+                          {{ choice.tag }}
+                    {% endfor %}
+                </select>
+                {% if field.auto_id %}
+                <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
+                {% endif %}
+
+                {% for error in field.errors %}
+                    <span class="help-block {{ form.error_css_class }}">{{ error }}</span>
+                {% endfor %}
+
+                {% if field.help_text %}
+                <p class="help-block">
+                    {{ field.help_text|safe }}
+                </p>
+                {% endif %}
+
+            {% endif %}
+
+    </div>
+
+    {% elif field|is_multiple_checkbox %}
+    <div class="col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
+        {% if field.auto_id %}
+            <label>{{ field.label }}</label>
+        {% endif %}
+        <div id="{{field.auto_id}}">
+            <ul>
+
+                {% for choice in field %}
+
+                    <li class="{% if field.field.required and form.required_css_class %}{{ form.required_css_class }}{% endif %}">
+                        <label>
+                            {{ choice.tag }}
+                            <span>{{ choice.choice_label }}</span>
+                        </label>
+                    </li>
+
+                {% endfor %}
+
+            </ul>
             {% for error in field.errors %}
                 <span class="help-block {{ form.error_css_class }}">{{ error }}</span>
             {% endfor %}
@@ -56,60 +133,15 @@
                 {{ field.help_text|safe }}
             </p>
             {% endif %}
-    </div>
-    {% elif field|is_select %}
-    <div class="col input-field {{ classes.label }} {{ classes.value }}">
-            {% if field|is_select_multiple %}
-                <div class="input-field {{ classes.value }}">
-                    <select multiple name="{{ field.name }}">
-                        {% for choice in field %}
-                              {{ choice.tag }}
-                        {% endfor %}
-                    </select>
-                    {% if field.auto_id %}
-                        <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
-                    {% endif %}
-
-                    {% for error in field.errors %}
-                        <span class="help-block {{ form.error_css_class }}">{{ error }}</span>
-                    {% endfor %}
-
-                    {% if field.help_text %}
-                    <p class="help-block">
-                        {{ field.help_text|safe }}
-                    </p>
-                    {% endif %}
-                </div>
-
-            {% else %}
-                    <select name="{{ field.name }}">
-                        {% for choice in field %}
-                              {{ choice.tag }}
-                        {% endfor %}
-                    </select>
-                    {% if field.auto_id %}
-                    <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
-                    {% endif %}
-
-                    {% for error in field.errors %}
-                        <span class="help-block {{ form.error_css_class }}">{{ error }}</span>
-                    {% endfor %}
-
-                    {% if field.help_text %}
-                    <p class="help-block">
-                        {{ field.help_text|safe }}
-                    </p>
-                    {% endif %}
-
-            {% endif %}
+        </div>
 
     </div>
 
     {% elif field|is_textarea %}
-        <div class="input-field col {{ classes.label }}">
+        <div class="input-field col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
             <textarea id="{{ field.auto_id }}" class="materialize-textarea" name="{{field.name}}">{% if field.value %}{{ field.value }}{% endif %}</textarea>
             {% if field.auto_id %}
-                <label class="{{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}" for="{{ field.auto_id }}">{{ field.label }}</label>
+                <label class="{% if field.field.required %}{{ form.required_css_class }}{% endif %}" for="{{ field.auto_id }}">{{ field.label }}</label>
             {% endif %}
 
             {% for error in field.errors %}
@@ -124,7 +156,7 @@
         </div>
 
     {% elif field|is_file %}
-        <div class="col {{ classes.label }}">
+        <div class="col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
 
             {% for error in field.errors %}
                 <p class="help-block orange-text {{ form.error_css_class }}">{{ error }}</p>
@@ -143,10 +175,10 @@
         </div>
     {% else %}
 
-        <div class="input-field col {{ classes.label }}">
+        <div class="input-field col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
             {{ field }}
             {% if field.auto_id %}
-                <label class="{{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}" for="{{ field.auto_id }}">{{ field.label }}</label>
+                <label class="{% if field.field.required %}{{ form.required_css_class }}{% endif %}" for="{{ field.auto_id }}">{{ field.label }}</label>
             {% endif %}
 
             {% for error in field.errors %}
