--- a/materializecssform/templates/materializecssform/attrs.html
+++ b/materializecssform/templates/materializecssform/attrs.html
@@ -1,1 +1,5 @@
-{% for name, value in field.field.widget.attrs.items %}{% if value is not False %} {{ name }}{% if value is not True %}="{{ value|stringformat:'s' }}"{% endif %}{% endif %}{% endfor %}
+{% for name, value in field.field.widget.attrs.items %}
+    {% if value is not False %} 
+        {{ name }}{% if value is not True %}="{{ value|stringformat:'s' }}"{% endif %}
+    {% endif %}
+{% endfor %}
