--- a/materializecssform/templates/materializecssform/field.html
+++ b/materializecssform/templates/materializecssform/field.html
@@ -59,7 +59,7 @@
 
     </div>
     {% elif field|is_select %}
-    <div class="input-field col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">z
+    <div class="input-field col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
             {% if field|is_select_multiple %}
                 <select multiple name="{{ field.name }}">
                     {% for choice in field %}
