Added support for Materialize Icons in most input types

--- a/materializecssform/templates/materializecssform/field.html
+++ b/materializecssform/templates/materializecssform/field.html
@@ -4,6 +4,9 @@
     {% if field|is_checkbox %}
     <div class="col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
         <div class="{% if field.field.required and form.required_css_class %}{{ form.required_css_class }}{% endif %}">
+            {% if classes.icon %}
+                <i class="material-icons prefix">{{ classes.icon }}</i>
+            {% endif %}
             <label>
 
                     {{ field }}
@@ -25,6 +28,9 @@
     {% elif field|is_radio %}
     <div class="col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
         <div class="{% if field.field.required and form.required_css_class %}{{ form.required_css_class }}{% endif %}">
+            {% if classes.icon %}
+                <i class="material-icons prefix">{{ classes.icon }}</i>
+            {% endif %}
             <label>
                     {{ field }}
                     {% if field.auto_id %}
@@ -43,6 +49,9 @@
     </div>
     {% elif field|is_date_input or field|is_datetime_input %}
     <div class="input-field col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
+        {% if classes.icon %}
+            <i class="material-icons prefix">{{ classes.icon }}</i>
+        {% endif %}
 
         <input type="date" id="{{ field.auto_id }}" name="{{ field.html_name }}" class="datepicker" value="{% if field.value %}{{ field.value }}{% endif %}" {% include 'materializecssform/attrs.html' %} >
         <label for="{{ field.id_for_label }}">{{ field.label }}</label>
@@ -61,6 +70,9 @@
     {% elif field|is_select %}
     <div class="input-field col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
             {% if field|is_select_multiple %}
+                {% if classes.icon %}
+                    <i class="material-icons prefix">{{ classes.icon }}</i>
+                {% endif %}
                 <select multiple name="{{ field.name }}">
                     {% for choice in field %}
                           {{ choice.tag }}
@@ -81,6 +93,9 @@
                 {% endif %}
 
             {% else %}
+                {% if classes.icon %}
+                    <i class="material-icons prefix">{{ classes.icon }}</i>
+                {% endif %}
                 <select name="{{ field.name }}">
                     {% for choice in field %}
                           {{ choice.tag }}
@@ -139,6 +154,9 @@
 
     {% elif field|is_textarea %}
         <div class="input-field col {{ classes.label }} {{ classes.value }} {{ classes.single_value }">
+            {% if classes.icon %}
+                <i class="material-icons prefix">{{ classes.icon }}</i>
+            {% endif %}
             <textarea id="{{ field.auto_id }}" class="materialize-textarea" name="{{field.html_name}}" {% include 'materializecssform/attrs.html' %} >{% if field.value %}{{ field.value }}{% endif %}</textarea>
             {% if field.auto_id %}
                 <label class="{% if field.field.required %}{{ form.required_css_class }}{% endif %}" for="{{ field.auto_id }}">{{ field.label }}</label>
@@ -165,6 +183,9 @@
             <div class="file-field input-field">
                 <div class="btn">
                     <span>{{ field.label }}</span>
+                    {% if classes.icon %}
+                        <i class="material-icons prefix">{{ classes.icon }}</i>
+                    {% endif %}
                     {{ field }}
                 </div>
                 <div class="file-path-wrapper">
@@ -176,6 +197,9 @@
     {% else %}
 
         <div class="input-field col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
+            {% if classes.icon %}
+                <i class="material-icons prefix">{{ classes.icon }}</i>
+            {% endif %}
             {{ field }}
             {% if field.auto_id %}
                 <label class="{% if field.field.required %}{{ form.required_css_class }}{% endif %}" for="{{ field.auto_id }}">{{ field.label }}</label>
