Change 2 occurrences of field.name to field.html_name
The rest of the fields already use field.html_name. This takes into
account django form prefixes if used whereas field.name does not.

--- a/materializecssform/templates/materializecssform/field.html
+++ b/materializecssform/templates/materializecssform/field.html
@@ -73,7 +73,7 @@
                 {% if classes.icon %}
                     <i class="material-icons prefix">{{ classes.icon }}</i>
                 {% endif %}
-                <select multiple name="{{ field.name }}">
+                <select multiple name="{{ field.html_name }}">
                     {% for choice in field %}
                           {{ choice.tag }}
                     {% endfor %}
@@ -96,7 +96,7 @@
                 {% if classes.icon %}
                     <i class="material-icons prefix">{{ classes.icon }}</i>
                 {% endif %}
-                <select name="{{ field.name }}">
+                <select name="{{ field.html_name }}">
                     {% for choice in field %}
                           {{ choice.tag }}
                     {% endfor %}
