--- a/materializecssform/templates/materializecssform/field.html
+++ b/materializecssform/templates/materializecssform/field.html
@@ -188,7 +188,7 @@
                 {% endfor %}
 
             {% if field.help_text %}
-                <p>
+                <p class="helper-text">
                     {{ field.help_text|safe }}
                 </p>
             {% endif %}
@@ -231,7 +231,7 @@
                 {% endfor %}
 
             {% if field.help_text %}
-                <p>
+                <p class="helper-text">
                     {{ field.help_text|safe }}
                 </p>
             {% endif %}
