Use span elements for the help texts of text inputs

--- a/materializecssform/templates/materializecssform/field.html
+++ b/materializecssform/templates/materializecssform/field.html
@@ -188,9 +188,9 @@
                 {% endfor %}
 
             {% if field.help_text %}
-                <p class="helper-text">
+                <span class="helper-text">
                     {{ field.help_text|safe }}
-                </p>
+                </span>
             {% endif %}
         </div>
 
@@ -231,9 +231,9 @@
                 {% endfor %}
 
             {% if field.help_text %}
-                <p class="helper-text">
+                <span class="helper-text">
                     {{ field.help_text|safe }}
-                </p>
+                </span>
             {% endif %}
         </div>
 
