Fixing disabled attr dissapearing for fields disabled at field level and not widget level (as recommended in the official doc https://docs.djangoproject.com/en/3.1/ref/forms/fields/#disabled), this affects only the complex fields on field.html that needs to be mounted again (date, datetime, textarea and select)

--- a/materializecssform/templates/materializecssform/attrs.html
+++ b/materializecssform/templates/materializecssform/attrs.html
@@ -3,3 +3,4 @@
         {{ name }}{% if value is not True %}="{{ value|stringformat:'s' }}" {% endif %}
     {% endif %}
 {% endfor %}
+{% if field.field.disabled %} disabled{% endif %}
